--- a/style.css
+++ b/style.css
@@ -7,8 +7,6 @@
     font-family: 'Poppins', sans-serif;
 }
 
-
-
 a {
     color:#fff;
     text-decoration: none;
@@ -250,9 +248,6 @@ a {
     }
 }
 
-/* summa */
-
-/* Section layout */
 section {
     padding: 60px 9%;
     color: #fff;
@@ -261,6 +256,9 @@ section {
     opacity: 0;
     animation: show-content 1.5s linear forwards;
     animation-delay: 2s;
+    display: block;
+    width: 100%;
+    overflow: hidden;
 }
 
 section h2 {
@@ -269,7 +267,6 @@ section h2 {
     margin-bottom: 20px;
 }
 
-/* About Section */
 .about p, .about ul {
     font-size: 16px;
     margin-bottom: 15px;
@@ -279,7 +276,6 @@ section h2 {
     list-style: circle;
 }
 
-/* Services Section */
 .services {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
@@ -305,7 +301,6 @@ section h2 {
     box-shadow: 0 0 20px #7cf03d70;
 }
 
-/* Contact Section */
 .contact ul {
     list-style: none;
     font-size: 16px;
@@ -314,6 +309,69 @@ section h2 {
 
 .contact ul li {
     margin-bottom: 10px;
+}
+
+@media (max-width: 768px) {
+    .navbar {
+        flex-direction: column;
+        padding: 15px;
+        align-items: center;
+    }
+
+    .navbar ul {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .navbar ul li {
+        margin: 10px 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    .home {
+        flex-direction: column;
+        text-align: center;
+        gap: 20px;
+        padding: 20px;
+    }
+
+    .home-info h1 {
+        font-size: 40px;
+    }
+
+    .home-info h2 {
+        font-size: 24px;
+    }
+
+    .home-info p {
+        font-size: 14px;
+    }
+
+    .home-img .img-box {
+        width: 60vw;
+        height: 60vw;
+    }
+
+    .services {
+        grid-template-columns: 1fr;
+        gap: 15px;
+    }
+
+    .service-item {
+        margin: 10px 0;
+        padding: 15px;
+    }
+
+    .contact ul {
+        padding: 0;
+        text-align: center;
+    }
+
+    .contact ul li {
+        margin-bottom: 15px;
+    }
 }
 
 
